--- a/nosotros.html
+++ b/nosotros.html
@@ -32,7 +32,7 @@
          <tr>
           
           <td><h2><a href="index.html">Inicio</a></td></h2>   
-          <td><h2><a href="/storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/Productos.html">Productos</a></h2></td>
+          <td><h2><a href="Productos.html">Productos</a></h2></td>
           <td><h2><a href="nosotros.html"> Nosotros</a></h2></td>
           <td><h2><a href="/storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/Contacto.html">Contacto</a></h2></td>
            <form>
